--- a/landing-page.html
+++ b/landing-page.html
@@ -12,21 +12,6 @@
                 <li tabindex=2>About Me</li>
                 <li tabindex=3>Resume</li>
                 <li tabindex=4>Contact Info</li>
-
-           
-                <!--  
-                nav aria-current=page 
-
-
-                     <a aria-haspopup="true"
-                    aria-expanded="false">Account</a>
-                    <ul class="pulldown-menu">
-                        <li>Login</li>
-                        <li>Logout</li>
-                        <li>Create Account</li>
-                        </ul>
-
-                        -->   
             </ul>
         </nav>
         <main>
@@ -44,44 +29,48 @@
                     Feel free to look around my page, you can check out some of my projects right below!
                 </p>  
             </div>
-           <!-- <h1>
-                Projects
-            </h1>-->
+
             <div class="flex-proj">
+                <div class="mini-div">
+                    <h2 class="mini-title">
+                        iPod Music Player
+                    </h2>
+                    <ul class="mini-text">
+                        <li>Project done for CS 330 (Human Computer Interaction)</li>
+                        <li>Utilized HTML, CSS, and Javascript to recreate an iPod music player</li>
+                        <li>Can enter albums and select songs to play</li>
+                        <li>Work in progress!</li>
+                        <li><a href="https://github.com/arojas1234/ipod-music-player">Github Repo</a></li>
+                    </ul>
+                    <img class="html-css-js-pic" 
+                     src="images/html-css-js.png"
+                     alt="HTML/CSS/Javascript Icons">
+                </div>
                 <img class="ipod-pic" 
                      src="images/music-player.png"
                      alt="Music Player Project">
-                <div class="mini-div">
-                    <h2>
-                        iPod Music Player
-                    </h2>
-                    <p>
-                        niehiueiuejoifejeifjeijboiewiuergie
-                        giejoigjegr
-                        wengiejoigw
-                        wewf
-                    </p>
-                </div>
-
             </div>
 
             <div class="flex-proj">
-                <div class="mini-div">
-                    <h2>
-                        iPod Music Player
-                    </h2>
-                    <p>
-                        niehiueiuejoifejeifjeijboiewiuergie
-                        giejoigjegr
-                        wengiejoigw
-                        wewf
-                    </p>
-                </div>
-                <img class="ht" 
+                <img class="heuristic-pic" 
                      src="images/heuristic.png"
                      alt="Heuristic Evaluation Project">
+                <div class="mini-div">
+                    <h2 class="mini-title">
+                        Website Heuristic Evaluation
+                    </h2>
+                    <ul class="mini-text">
+                        <li>Project done for CS 330 (Human Computer Interaction)</li>
+                        <li>Utilized Nielsen's design heuristics to evaluate the usability of local Chicago bike rental site</li>
+                        <li>Documented all usability problems, rating them based on severity and providing suggestions/solutions</li>
+                        <li><a href="https://docs.google.com/document/d/1iwFGdi5MHXSWpnCVMeNpmsXzp6yWSBIv-jwLX7_2knU/edit?usp=sharing">Google Doc Link</a></li>
+                    </ul>
+                    <img class="heuristic-icon-pic" 
+                     src="images/heuristic-icons.png"
+                     alt="Nielsen Design Heuristics">
+                </div>
             </div>
+            <br><br><br><br><br>
         </main>
-
     </body>
 </html>
