--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <nav role=navigation>
             <ul>
-                <li tabindex=1>Home</li>
-                <li tabindex=2>About Me</li>
-                <li tabindex=3>Resume</li>
-                <li tabindex=4>Contact Info</li>
+                <li tabindex=1><a href="index.html">Home</a></li>
+                <li tabindex=2><a href="about-me.html">About Me</a></li>
+                <li tabindex=3><a href="resume.html">Resume</a></li>
+                <li tabindex=4><a href="contact.html">Contact Info</a></li>
             </ul>
         </nav>
         <main>
