--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,29 @@
         </nav>
         </nav>
         <main>
-            <h1>
+            <h1 aria-label="Contact Page">
                 Contact Info
             </h1>
-            <p>
-                Email:andresrojas2024@u.northwestern.edu <br>
-                LinkedIn: https://www.linkedin.com/in/andres-s-rojas/ <br>
-                Github: https://github.com/arojas1234 <br> 
-
-            </p>
+            <div class="contact-flex">
+                <ul class="contact-text" aria-label="Contact Info List">
+                    <li><a href="mailto: andresrojas2024@u.northwestern.edu">Email: andresrojas2024@u.northwestern.edu</a></li>
+                    <br>
+                    <li><a href="https://www.linkedin.com/in/andres-s-rojas/">LinkedIn: linkedin.com/in/andres-s-rojas/</a></li>
+                    <br>
+                    <li><a href="https://github.com/arojas1234">Github: github.com/arojas1234 </a></li>
+                </ul>
+                
+                    <img class="contact-pics" 
+                    src="images/email-icon.png"
+                    alt="Email Icon">
+                    <img class="contact-pics" 
+                    src="images/linkedin.png"
+                    alt="LinkedIn Logo">
+                    <img class="contact-pics" 
+                    src="images/github-logo.png"
+                    alt="Github Icon">
+                
+            </div>
         </main>
     </body>
 </html>
