--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             </ul>
         </nav>
         <main>
-            <h1>
+            <h1 aria-label="Home Page">
                 Welcome!
             </h1>
             <div class="flex-landing">
                 <img src="images/me.jpeg"
                      alt="Andres Rojas Picture">
-                <p class="landing-p">
+                <p class="landing-p" role="Welcome Statement">
                     <br>
                     Hey there! My name is Andres Rojas, a current junior at Northwestern University! I am a computer
                     science major from Miami, FL with a passion for tech and video games!
@@ -32,10 +32,10 @@
 
             <div class="flex-proj">
                 <div class="mini-div">
-                    <h2 class="mini-title">
+                    <h2 class="mini-title" aria-label="Project #1 Title">
                         iPod Music Player
                     </h2>
-                    <ul class="mini-text">
+                    <ul class="mini-text" aria-label="Project #1 Summary">
                         <li>Project done for CS 330 (Human Computer Interaction)</li>
                         <li>Utilized HTML, CSS, and Javascript to recreate an iPod music player</li>
                         <li>Can enter albums and select songs to play</li>
@@ -56,10 +56,10 @@
                      src="images/heuristic.png"
                      alt="Heuristic Evaluation Project">
                 <div class="mini-div">
-                    <h2 class="mini-title">
+                    <h2 class="mini-title" aria-label="Project #2 Title">
                         Website Heuristic Evaluation
                     </h2>
-                    <ul class="mini-text">
+                    <ul class="mini-text" aria-label="Project #2 Summary">
                         <li>Project done for CS 330 (Human Computer Interaction)</li>
                         <li>Utilized Nielsen's design heuristics to evaluate the usability of local Chicago bike rental site</li>
                         <li>Documented all usability problems, rating them based on severity and providing suggestions/solutions</li>
