--- a/resume.html
+++ b/resume.html
@@ -16,11 +16,14 @@
         </nav>
         </nav>
         <main>
-            <h1>
+            <h1 aria-label="Resume Page">
                 Resume
             </h1>
             <div>
-            <iframe width="100%" height="100%" src="https://docs.google.com/document/d/e/2PACX-1vTXdSttMKg3aFG2kbVCj4Bh_kaLTBAnbenOUkT6epqMyQVz7WeHPKvTiCeiuVkCNw/pub?embedded=true"></iframe>
+            <iframe role="External Resume Window" class="iframe" src="https://docs.google.com/document/d/e/2PACX-1vTXdSttMKg3aFG2kbVCj4Bh_kaLTBAnbenOUkT6epqMyQVz7WeHPKvTiCeiuVkCNw/pub?embedded=true"></iframe>
+            </div>
+            <div class="resume-link" aria-label="Resume Link">
+                <p><a href="https://docs.google.com/document/d/1nEAE56mCh3oNO4bYwHQyH4Unsi7awo1Y/edit?usp=sharing&ouid=100645630939940739071&rtpof=true&sd=true">Direct Link</a></a></p>
             </div>
         </main>
     </body>
