--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.cdnfonts.com/css/campton" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
 
 
 </head>
@@ -43,6 +46,7 @@
             <a href="https://northwestern.campuslabs.com/engage/organization/esports"><img src="wc.png" class="logo-pics" alt="Wildcat Connection"></a>
         </div>
         <img src="smash.jpg" class="front-pic" alt="Club Photo">
+        <script src="sketch.js"></script>
     </main>
     </div>
 </body>
