--- a/contact.html
+++ b/contact.html
@@ -1,50 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <header>
-        <nav class="nav-bar">
-            <div class="logo">
-                <img src="https://placehold.co/40x40" alt="Northwestern Logo">
-            </div>
-            <div class="nav-buttons">
-                <a href="index.html" class="nav-button">Home</a>
-                <a href="teams.html" class="nav-button">Teams</a>
-                <a href="about.html" class="nav-button">About Us</a>
-                <a href="contact.html" class="nav-button">Contact Us</a>
-            </div>
+<html lang="en" dir="ltr">
+    <head>
+        <title>Contact Info</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <nav role=navigation>
+            <ul>
+                <li tabindex=1><a href="index.html">Home</a></li>
+                <li tabindex=2><a href="about-me.html">About Me</a></li>
+                <li tabindex=3><a href="resume.html">Resume</a></li>
+                <li tabindex=4><a href="contact.html">Contact Info</a></li>
+            </ul>
         </nav>
-    </header>
-    <main>
-        <h1>Contact Us</h1>
-        <div class="info">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <img src="https://placehold.co/300x250" alt="Leadership Picture"></a>
-        </div>
-        <div class="contact-info">
-            <div class="contacts">
-                <h3>Club Email</h3>
-                <a href="mailto:northwesternesports@u.northwestern.edu"><img src="https://placehold.co/60x60" alt="Email"></a>
+        </nav>
+        <main>
+            <h1 aria-label="Contact Page">
+                Contact Info
+            </h1>
+            <div class="contact-flex">
+                <ul class="contact-text" aria-label="Contact Info List">
+                    <li><a href="mailto: andresrojas2024@u.northwestern.edu">Email: andresrojas2024@u.northwestern.edu</a></li>
+                    <br>
+                    <li><a href="https://www.linkedin.com/in/andres-s-rojas/">LinkedIn: linkedin.com/in/andres-s-rojas/</a></li>
+                    <br>
+                    <li><a href="https://github.com/arojas1234">Github: github.com/arojas1234 </a></li>
+                </ul>
+                
+                    <img class="contact-pics" 
+                    src="images/email-icon.png"
+                    alt="Email Icon">
+                    <img class="contact-pics" 
+                    src="images/linkedin.png"
+                    alt="LinkedIn Logo">
+                    <img class="contact-pics" 
+                    src="images/github-logo.png"
+                    alt="Github Icon">
+                
             </div>
-            <div class="contacts">
-                <h3>Discord</h3>
-                <a href="https://discord.gg/nuesports"><img src="https://placehold.co/60x60" alt="Discord"></a>
-            </div>
-            <div class="contacts">
-                <h3>Wildcat Connection</h3>
-                <a href="https://northwestern.campuslabs.com/engage/organization/esports"><img src="https://placehold.co/60x60" alt="Wildcat Connection"></a>
-            </div>            
-        </div>
-        <h3>Social Media</h3>
-        <div>
-            <a href="https://x.com/nuesports"><img src="https://placehold.co/60x60" alt="Twitter"></a>
-            <a href="https://www.instagram.com/northwesternesports/"><img src="https://placehold.co/60x60" alt="Instagram"></a>
-            <a href="https://fb.com"><img src="https://placehold.co/60x60" alt="Facebook"></a>
-        </div>
-    </main>
-</body>
+        </main>
+    </body>
 </html>
