--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <title>Contact Info</title>
-        <link rel="stylesheet" href="styles.css">
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <nav role=navigation>
-            <ul>
-                <li tabindex=1><a href="index.html">Home</a></li>
-                <li tabindex=2><a href="about-me.html">About Me</a></li>
-                <li tabindex=3><a href="resume.html">Resume</a></li>
-                <li tabindex=4><a href="contact.html">Contact Info</a></li>
-            </ul>
-        </nav>
-        </nav>
-        <main>
-            <h1 aria-label="Contact Page">
-                Contact Info
-            </h1>
-            <div class="contact-flex">
-                <ul class="contact-text" aria-label="Contact Info List">
-                    <li><a href="mailto: andresrojas2024@u.northwestern.edu">Email: andresrojas2024@u.northwestern.edu</a></li>
-                    <br>
-                    <li><a href="https://www.linkedin.com/in/andres-s-rojas/">LinkedIn: linkedin.com/in/andres-s-rojas/</a></li>
-                    <br>
-                    <li><a href="https://github.com/arojas1234">Github: github.com/arojas1234 </a></li>
-                </ul>
-                
-                    <img class="contact-pics" 
-                    src="images/email-icon.png"
-                    alt="Email Icon">
-                    <img class="contact-pics" 
-                    src="images/linkedin.png"
-                    alt="LinkedIn Logo">
-                    <img class="contact-pics" 
-                    src="images/github-logo.png"
-                    alt="Github Icon">
-                
+
+<head>
+    <meta charset="UTF-8">
+    <title>Contact Info</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-end" role="navigation">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="d-lg-flex justify-content-between w-100">
+                    <div class="d-lg-flex">
+                        <!-- Font Size Buttons -->
+                        <div class="d-flex align-items-center me-3">
+                            <button id="increase-font" class="btn btn-outline-light me-2">A+</button>
+                            <button id="decrease-font" class="btn btn-outline-light">A-</button>
+                        </div>
+                        <!-- Dark Mode Toggle -->
+                        <div class="d-flex align-items-center">
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="darkModeToggle">
+                                <label class="form-check-label text-light ms-2" for="darkModeToggle">Dark Mode</label>
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about-me.html">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="experience.html">Previous Experiences</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contact.html">Contact Info & Resume</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </main>
-    </body>
+        </div>
+    </nav>
+    <main class="container mt-5" id="main-content">
+        <br>
+        <h1 class="text-center title-text" aria-label="Contact Page">
+            Contact Info
+        </h1>
+        <div class="contact-flex">
+            <div class="text-center">
+                <p><a href="mailto: andresrojas2024@u.northwestern.edu">Email: andresrojas2024@u.northwestern.edu</a>
+                </p>
+                <p><a href="https://www.linkedin.com/in/andres-s-rojas/">LinkedIn: linkedin.com/in/andres-s-rojas/</a>
+                </p>
+                <p><a href="https://github.com/arojas1234">Github: github.com/arojas1234 </a></p>
+            </div>
+            <div class="text-center contact-logos">
+                <a href="mailto:andresrojas2024@u.northwestern.edu"><img src="images/email-icon.png"
+                        class="logo-pics mx-2" alt="Email"></a>
+                <a href="https://www.linkedin.com/in/andres-s-rojas/"><img src="images/linkedin.png"
+                        class="logo-pics mx-2" alt="LinkedIn"></a>
+                <a href="https://github.com/arojas1234"><img src="images/github-logo.png" class="logo-pics mx-2"
+                        alt="Github"></a>
+            </div>
+        </div>
+        <br><br>
+        <h1 class="text-center title-text" aria-label="Resume">
+            Resume
+        </h1>
+        <div class="resume-container">
+            <iframe class="resume-iframe" role="Resume Window" src="ARojas_Resume_Apr24.pdf"></iframe>
+        </div>
+    </main>
+    <script src="scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
