--- a/about-me.html
+++ b/about-me.html
@@ -8,9 +8,6 @@
     <link href="https://fonts.cdnfonts.com/css/campton" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -110,11 +107,12 @@
                     </button>
                 </div>
             </div>
+            <script src="sketch.js"></script>
         </div>
-        <script src="sketch.js"></script>
     </main>
-    <script src="scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 
 </html>
