--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
             <iframe class="resume-iframe" role="Resume Window" src="ARojas_Resume_Apr24.pdf"></iframe>
         </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
