--- a/experience.html
+++ b/experience.html
@@ -109,7 +109,7 @@
             </div>
         </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
