--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <br><br>
     </main>
-    <script src="scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
