FINAL portfolio website

--- a/about-me.html
+++ b/about-me.html
@@ -64,8 +64,7 @@
                         However, I have lived most of my life in Miami, FL. </li>
                     <li> In my time on campus, I was the external president of the NU Esports Club, as well as the financial chair
                         for the NU SHPE chapter. </li>
-                    <li> My hobbies include playing video games, watching anime, and fostering kittens. I 
-                        am also a big music fun, please enjoy some cool music down below! </li>
+                    <li> My hobbies include playing video games, watching anime, and fostering kittens. </li>
                 </ul>
             </div>
             <div class="col-md-6 text-center">
