--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
             Resume
         </h1>
         <div class="resume-container">
-            <iframe class="resume-iframe" role="Resume Window" src="ARojas_Resume_Apr24.pdf"></iframe>
+            <iframe class="resume-iframe" role="Resume Window" src="misc/ARojas_Resume_Apr24.pdf"></iframe>
         </div>
     </main>
     <script src="scripts/scripts.js"></script>
